--- a/Content/A-Introduction-Topics/Getting-Started.htm
+++ b/Content/A-Introduction-Topics/Getting-Started.htm
@@ -8,6 +8,8 @@
         <ol>
             <li>Install MadCap Flare. You can download the trial version from their official site.</li>
             <li>Create a new project with HTML5 output.</li>
+            <li>Sign up for <a href="https://fast.io/">Fast.io</a>.</li>
+            <li>Sign up for <a href="http://box.com/">Box</a> or <a href="https://github.com/">GitHub</a> (other online storage services are available).</li>
         </ol>
     </body>
 </html>
