--- a/Content/A-Introduction-Topics/Getting-Started.htm
+++ b/Content/A-Introduction-Topics/Getting-Started.htm
@@ -8,6 +8,7 @@
         <ol>
             <li>Install MadCap Flare. You can download the trial version from their official site.</li>
             <li>Create a new project with HTML5 output.</li>
+            <li>Connect your project to Git.</li>
         </ol>
     </body>
 </html>
