Committing file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/csh.js file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/Default.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/Default.js file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/Default.mcwebhelp file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/Default_CSH.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/index.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/search.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/Sitemap.xml file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/template instructions.pdf file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/a-introduction-topics/getting-started.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/a-introduction-topics/github.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/a-introduction-topics/whats-new.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/b-feature-topics/feature1.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/b-feature-topics/feature2.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/b-feature-topics/feature3.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/b-feature-topics/features.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/c-procedure-topics/procedure1.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/c-procedure-topics/procedure2.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/c-procedure-topics/procedure3.html file:///C:/Users/ivanc/Documents/My Projects/HTML-sample/Output/Ivan/HTML5/c-procedure-topics/

--- a/Output/Ivan/HTML5/a-introduction-topics/getting-started.html
+++ b/Output/Ivan/HTML5/a-introduction-topics/getting-started.html
@@ -117,6 +117,7 @@
                                         <ol>
                                             <li value="1">Install MadCap Flare. You can download the trial version from their official site.</li>
                                             <li value="2">Create a new project with HTML5 output.</li>
+                                            <li value="3">Connect your project to Git.</li>
                                         </ol>
                                     </div>
                                 </div>
